--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </div>
 
                 <!-- search result  -->
-                <div id="phones"
+                <div id="phones-container"
                     class="row row-cols-1 row-cols-md-4 g-4">
 
                 </div>
