--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </header> -->
         <main class="m-3">
             <section>
-                <div
+                <div>
                     class="input-group mb-3 w-50 mx-auto">
                     <input type="text"
                         id="search-field"
