--- a/index.html
+++ b/index.html
@@ -1,63 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible"
-            content="IE=edge">
-        <meta name="viewport"
-            content="width=device-width, initial-scale=1.0">
-        <title>Phone Hunter</title>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Phone Hunter</title>
+    <!-- Boostrap -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
 
-        <!-- Boostrap -->
-        <link rel="stylesheet"
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./styles/style.css">
 
-        <link rel="stylesheet"
-            href="./styles/style.css">
+</head>
 
-    </head>
-
-    <body class=".container-fluid">
-        <!-- <header class="text-center">
+<body class=".container-fluid">
+    <!-- <header class="text-center">
             Search Yours Phone
         </header> -->
-        <main class="m-3">
-            <section>
-                <div
-                    class="input-group mb-3 w-50 mx-auto">
-                    <input type="text"
-                        id="search-field"
-                        class="form-control"
-                        placeholder="Search Your Phone">
-                    <button
-                        onclick="searchPhone()"
-                        id="search-phone"
-                        class="btn btn-info">Button</button>
-                </div>
+    <main class="m-3">
+        <section>
+            <div class="input-group mb-3 w-50 mx-auto">
+                <input type="text" id="search-field" class="form-control" placeholder="Search Your Phone">
+                <button onclick="searchPhone()" id="search-phone" class="btn btn-info">search</button>
+            </div>
 
-                <div id="phone-detail">
+            <div id="phone-detail">
 
-                </div>
+            </div>
 
-                <!-- search result  -->
-                <div id="phones-container"
-                    class="row row-cols-1 row-cols-md-4 g-4">
+            <!-- search result  -->
+            <div id="phones-container" class="row row-cols-1 row-cols-md-3 g-4">
 
-                </div>
-            </section>
-        </main>
-        <!-- <footer>
+            </div>
+        </section>
+    </main>
+    <!-- <footer>
             <small>
                 copy right
             </small>
         </footer> -->
 
-        <!-- Boostrap -->
-        <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- javascript -->
-        <script src="./js/app.js"></script>
-    </body>
+    <!-- Boostrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- javascript -->
+    <script src="./js/app.js"></script>
+
+    <script src="https://kit.fontawesome.com/b6a0486824.js" crossorigin="anonymous"></script>
+
+</body>
 
 </html>
