--- a/index.html
+++ b/index.html
@@ -7,29 +7,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Phone Hunter</title>
     <!-- Boostrap -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"> -->
 
     <link rel="stylesheet" href="./styles/style.css">
 
 </head>
 
-<body class=".container-fluid">
-    <!-- <header class="text-center">
-            Search Yours Phone
-        </header> -->
-    <main class="m-3">
+<body class="">
+    <!-- phone search box -->
+    <header class="">
+        <div class="input-group">
+            <input type="text" id="search-field" class="form-control" placeholder="Search Your Phone">
+            <button onclick="searchPhone()" id="search-phone" class="btn btn-info">search</button>
+        </div>
+    </header>
+
+    <main class="">
         <section>
-            <div class="input-group mb-3 w-50 mx-auto">
-                <input type="text" id="search-field" class="form-control" placeholder="Search Your Phone">
-                <button onclick="searchPhone()" id="search-phone" class="btn btn-info">search</button>
-            </div>
+
 
             <div id="phone-detail">
 
             </div>
 
             <!-- search result  -->
-            <div id="phones-container" class="row row-cols-1 row-cols-md-3 g-4">
+            <div id="phones-container">
 
             </div>
         </section>
