over all UI Improve

--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Phone Hunter</title>
-    <!-- Boostrap -->
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"> -->
-
+    <!-- CSS -->
     <link rel="stylesheet" href="./styles/style.css">
 
 </head>
@@ -18,35 +16,37 @@
     <header class="">
         <div class="input-group">
             <input type="text" id="search-field" class="form-control" placeholder="Search Your Phone">
-            <button onclick="searchPhone()" id="search-phone" class="btn btn-info">search</button>
+            <button onclick="searchPhone()" id="search-phone" class="">search</button>
         </div>
     </header>
 
     <main class="">
+        <!-- loader spinner  -->
+        <figure class="loader">
+            <div class="dot white"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+        </figure>
+
+        <!-- phone details container  -->
+        <div id="phone-detail">
+            <!-- phone details will appear here  -->
+        </div>
+
         <section>
-
-
-            <div id="phone-detail">
-
-            </div>
-
             <!-- search result  -->
             <div id="phones-container">
-
+                <!-- all phone card  -->
             </div>
         </section>
     </main>
-    <!-- <footer>
-            <small>
-                copy right
-            </small>
-        </footer> -->
 
-    <!-- Boostrap -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- javascript -->
     <script src="./js/app.js"></script>
 
+    <!-- font awesome icons script  -->
     <script src="https://kit.fontawesome.com/b6a0486824.js" crossorigin="anonymous"></script>
 
 </body>
